[package]
name = "polybenchrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru_stack = { path = "../stack_alg_sim/lru_stack"}
hist = { path = "../stack_alg_sim/hist" }
static_rd = { path = "../static_rd" }
dace = { path = "../dace/dace" }
dace_tests = { path = "../dace/dace_tests" }
list_serializable = { path = "../list_serializable" }
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
aws_utilities = { path = "../aws_utilities" }
